--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "coba-1",
+  "name": "@ajariapps/chat-react-example",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ajariapps/chat-react": "^2.4.0",
+    "jwt-decode": "^4.0.0",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
