--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "@ajariapps/chat-react-example",
-  "version": "0.1.0",
+  "name": "ajari-examples",
+  "version": "1.0.0",
+  "description": "",
+  "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "@ajariapps/chat-react": "^2.4.0",
-    "jwt-decode": "^4.0.0",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "turbo": "^2.0.12"
+  },
+  "packageManager": "yarn@1.22.22",
+  "workspaces": [
+    "apps/*"
+  ]
 }
